--- a/bot/locales/ru-RU.json
+++ b/bot/locales/ru-RU.json
@@ -8,7 +8,7 @@
         "release": "🗓️ Год выхода:",
         "rating": "⭐ Рейтинг:",
         "genres": "🎭 Жанры:",
-        "plot": "📜 Сюжет:",
+        "plot": "📜 Обзор:",
         "episodes": "серий в",
         "seasons": "сезонах",
         "minutes": "минут"
@@ -36,9 +36,9 @@
         },
         "set": {
             "en": "🇺🇸 Английский",
-            "es": "🇪🇸 Испанский (скоро)",
-            "fr": "🇫🇷 Французский (скоро)",
-            "de": "🇩🇪 Немецкий (скоро)",
+            "es": "🇪🇸 Испанский",
+            "fr": "🇫🇷 Французский",
+            "de": "🇩🇪 Немецкий",
             "ru": "🇷🇺 Русский"
         },
         "changed": "Язык изменен",
@@ -57,7 +57,7 @@
     "no_similar": "Похожий контент не найден",
     "search_not_found": "❌ Контент не найден. Попробуйте более точное название",
     "search_title": "🎬 Пожалуйста отправьте название Фильма/Сериала, который хотите найти",
-    "search_wrong_type": "Пожалуйста, отправьте название в виде текста (не фото/стикер).",
+    "search_wrong_type": "Пожалуйста, отправьте название в виде текста (не фото/стикер)",
     "settings": {
         "adult": "Переключить 18+",
         "language": "Сменить язык",
@@ -65,7 +65,7 @@
     },
     "show_similar": "🔍 Похожие",
     "start": "Привет! Я помогу вести учет просмотренных Фильмов и Сериалов\n\nКоманды:\n/menu - Главное Меню",
-    "state_empty": "Content ID отсутствует, state пуст.",
+    "state_empty": "Content ID отсутствует",
     "stats": {
         "user": "👤 Пользователь:",
         "movies": "🎬 Фильмов просмотрено:",
